--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Retro Computer Slides</title>
-  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Victor+Mono&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
-      font-family: 'VT323', monospace;
+      font-family: 'Victor Mono', monospace;
       background-color: black;
-      color: #00ff00;
+      color: #1edd1e;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -19,8 +19,8 @@
 
     #slide-container {
       width: 100%;
-      max-width: 1700px;
-      font-size: 1.5rem;
+      max-width: 1800px;
+      font-size: 1.4rem;
       line-height: 1.4;
       transition: opacity 1s ease;
       opacity: 1;
@@ -37,33 +37,66 @@
 
     .slide-content .text {
       flex: 2;
-      max-width: 60%;
+      max-width: 100%;
       text-align: left;
     }
 
     .slide-content .image {
       flex: 1;
       display: flex;
-      justify-content: center;
+      justify-content: space-between;
       align-items: center;
     }
 
     .slide-content img {
       max-width: 100%;
       height: auto;
-      border: 2px solid #33ff33;
+      border: 3px solid #1edd1e;
     }
 
     h1 {
       font-size: 2.5rem;
       margin-bottom: 1rem;
-      color: #a136df;
+      color: #BF00FF;
+    }
+
+    #banner {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height:75px;
+      background-color: #ffffff;
+      color: black;
+      text-align: center;
+      font-size: 1.2rem;
+      padding: 0.5em;
+      box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.5);
+      display: flex;
+      justify-content: left;
+      padding-left: 2em;
+      padding-right: 2em;
+    }
+
+    #banner img {
+      height: auto;
+      object-fit: contain;
+      margin-right: 2em;
+    }
+
+    #banner a {
+      color: black;
+      text-decoration: none;
     }
   </style>
 </head>
 
 <body>
   <div id="slide-container">Loading...</div>
+  <div id="banner">
+    <img src="resources/images/UoC_logo_with_text.png" alt="Retro Computer 1" />
+    <img src="resources/images/40yearsLogo.png" alt="Retro Computer 2" />
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="script.js"></script>
 </body>
