--- a/index.html
+++ b/index.html
@@ -81,13 +81,60 @@
     #banner img {
       height: auto;
       object-fit: contain;
-      margin-right: 2em;
+      margin-right: 4em;
     }
 
     #banner a {
       color: black;
       text-decoration: none;
     }
+
+    @media (max-width: 768px) {
+      body {
+        flex-direction: column;
+        justify-content: flex-start;
+        height: auto;
+        padding: 1em;
+      }
+
+      #slide-container {
+        font-size: 1rem;
+        padding: 1em;
+      }
+
+      .slide-content {
+        flex-direction: column;
+        gap: 1em;
+        margin-bottom: 2em;
+        padding: 0 1em;
+      }
+
+      .slide-content .text, .slide-content .image {
+        flex: none;
+        width: 100%;
+        text-align: center;
+      }
+
+      .slide-content img {
+        max-width: 80%;
+        height: auto;
+      }
+
+      #banner {
+        flex-direction: column;
+        align-items: center;
+        height: auto;
+        padding: 1em;
+        font-size: 1rem;
+        text-align: center;
+      }
+
+      #banner img {
+        max-width: 80%;
+        margin: 0.5em 0;
+      }
+    }
+
   </style>
 </head>
 
@@ -96,6 +143,7 @@
   <div id="banner">
     <img src="resources/images/UoC_logo_with_text.png" alt="Retro Computer 1" />
     <img src="resources/images/40yearsLogo.png" alt="Retro Computer 2" />
+    <img src="resources/images/qr-code.png" alt="Retro Computer 3" />
   </div>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="script.js"></script>
