--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     }
 
     #banner {
-      position: absolute;
+      position: fixed;
       bottom: 0;
       left: 0;
       width: 100%;
@@ -76,6 +76,7 @@
       justify-content: left;
       padding-left: 2em;
       padding-right: 2em;
+      z-index: 100;
     }
 
     #banner img {
@@ -94,12 +95,8 @@
         flex-direction: column;
         justify-content: flex-start;
         height: auto;
-        padding: 1em;
-      }
-
-      #slide-container {
-        font-size: 1rem;
-        padding: 1em;
+        padding-bottom: 100px;
+        text-align: left;
       }
 
       .slide-content {
@@ -110,31 +107,27 @@
       }
 
       .slide-content .text, .slide-content .image {
-        flex: none;
         width: 100%;
         text-align: center;
       }
 
       .slide-content img {
         max-width: 80%;
-        height: auto;
       }
 
       #banner {
-        flex-direction: column;
-        align-items: center;
-        height: auto;
+        flex-direction: row;
+        gap: 0.5em;
         padding: 1em;
-        font-size: 1rem;
         text-align: center;
+        height: auto;
       }
-
+      
       #banner img {
         max-width: 80%;
-        margin: 0.5em 0;
+        margin-right: 0;
+        height: 50px;
       }
-    }
-
   </style>
 </head>
 
