--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
       .slide-content .text, .slide-content .image {
         width: 100%;
-        text-align: center;
+        text-align: left;
       }
 
       .slide-content img {
@@ -128,6 +128,7 @@
         margin-right: 0;
         height: 50px;
       }
+    }
   </style>
 </head>
 
@@ -140,5 +141,6 @@
   </div>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="script.js"></script>
+  <script src="swipe.js"></script>
 </body>
 </html>
