style: enhance h1 styling with text-shadow

--- a/index.html
+++ b/index.html
@@ -81,10 +81,15 @@
     }
 
     h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-      color: #BF00FF;
-    }
+    font-size: 2.5rem;
+    margin-bottom: 1rem;
+    color: #BF00FF;
+    text-shadow:
+      0 0 2px #BF00FF,
+      0 0 4px #BF00FF,
+      0 0 6px #800080;
+    letter-spacing: 1.5px;
+  }
 
     #banner {
       position: fixed;
