--- a/index.html
+++ b/index.html
@@ -58,10 +58,20 @@
 
     .slide-content {
       display: flex;
-      flex-wrap: wrap;
-      gap: 2em;
+      flex-direction: column;
+      gap: 1.5em;
       padding: 0 2em;
       margin-bottom: 4em;
+    }
+
+    .slide-content .header {
+      width: 100%;
+    }
+
+    .slide-content .body {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2em;
     }
 
     .slide-content .text {
@@ -96,7 +106,7 @@
       bottom: 0;
       left: 0;
       width: 100%;
-      height: 75px;
+      height: 80px;
       background-color: #ffffff;
       color: black;
       display: flex;
@@ -109,7 +119,7 @@
 
     #banner img {
       height: auto;
-      max-height: 60px;
+      max-height: 80px;
       object-fit: contain;
     }
 
@@ -124,6 +134,11 @@
         align-items: stretch;
         padding-bottom: 100px;
       }
+      
+      h1 {
+        font-size: 2rem;
+        margin-bottom: 1rem;
+      }
 
       .slide-content {
         flex-direction: column;
@@ -131,16 +146,22 @@
         gap: 1em;
       }
 
-      h1 {
-        font-size: 2rem;
-        margin-bottom: 1rem;
+      .slide-content {
+        flex-direction: column;
+        padding: 0 1em;
+        gap: 1em;
       }
 
-      .slide-content .text {
-        order: 0;
+      .slide-content .body {
+        flex-direction: column;
+        display: flex;
       }
 
       .slide-content .image {
+        order: 0;
+      }
+
+      .slide-content .text {
         order: 1;
       }
 
@@ -150,7 +171,7 @@
 
       #banner {
         flex-wrap: wrap;
-        justify-content: center;
+        justify-content: left;
         height: auto;
         gap: 1em;
       }
