--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <style>
     body {
       margin: 0;
+      padding: 0;
       font-family: 'Victor Mono', monospace;
       background-color: black;
       color: #1edd1e;
@@ -15,6 +16,7 @@
       align-items: center;
       justify-content: center;
       min-height: 100vh;
+      height: 100%;
     }
 
     #progress-bar-container {
@@ -25,6 +27,7 @@
       height: 5px;
       background-color: #333;
       z-index: 9999;
+      margin-bottom: 5em;
     }
 
     progress {
@@ -50,8 +53,8 @@
 
     #slide-container {
       width: 100%;
-      max-width: 1800px;
-      font-size: 1.4rem;
+      max-width: 2000px;
+      font-size: 1.5rem;
       line-height: 1.4;
       transition: opacity 1s ease;
     }
@@ -66,22 +69,36 @@
 
     .slide-content .header {
       width: 100%;
+      text-align: left; /* Centering the header */
+      margin: 0; /* Remove any default margin */
+      padding: 0 2em; /* Ensure padding on both sides, same as description */
     }
 
     .slide-content .body {
       display: flex;
       flex-wrap: wrap;
       gap: 2em;
+      justify-content: left;
+      padding: 0 1em
     }
 
     .slide-content .text {
-      flex: 2;
+      flex: 3;
       min-width: 300px;
+      padding: 1em;
     }
 
     .slide-content .image {
       flex: 1;
       min-width: 250px;
+    }
+
+    .slide-content .image img {
+      max-height: 60vh;
+      max-width: 100%;
+      width: auto;
+      height: auto;
+      object-fit: contain;
     }
 
     .slide-content img {
@@ -90,21 +107,26 @@
       border: 3px solid #1edd1e;
     }
 
+    .slide-content .header h1 {
+      margin-top: 1.5em;
+    }
+
     h1 {
-    font-size: 2.5rem;
-    margin-bottom: 1rem;
-    color: #BF00FF;
-    text-shadow:
-      0 0 2px #BF00FF,
-      0 0 4px #BF00FF,
-      0 0 6px #800080;
-    letter-spacing: 1.5px;
-  }
+      font-size: 3rem;
+      margin-bottom: 1.2rem;
+      color: #BF00FF;
+      text-shadow:
+        0 0 2px #BF00FF,
+        0 0 4px #BF00FF,
+        0 0 6px #800080;
+      letter-spacing: 1.5px;
+    }
 
     #banner {
       position: fixed;
       bottom: 0;
       left: 0;
+      right: 0;
       width: 100%;
       height: 80px;
       background-color: #ffffff;
@@ -114,7 +136,7 @@
       gap: 2em;
       padding: 0.5em 2em;
       box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.5);
-      z-index: 100;
+      z-index: 1000;
     }
 
     #banner img {
@@ -159,6 +181,10 @@
 
       .slide-content .image {
         order: 0;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        padding: 0 1em;
       }
 
       .slide-content .text {
@@ -192,9 +218,9 @@
   <div id="slide-container">Loading...</div>
 
   <div id="banner">
-    <img src="resources/images/UoC_logo_with_text.png" alt="Retro Computer 1" />
-    <img src="resources/images/40yearsLogo.png" alt="Retro Computer 2" />
-    <img src="resources/images/qr-code.png" alt="Retro Computer 3" />
+    <img src="resources/images/UoC_logo_with_text.png" alt="UOC-Logo" />
+    <img src="resources/images/40yearsLogo.png" alt="CSD-40-Years" />
+    <img src="resources/images/qr-code.png" alt="QR-code" />
   </div>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="script.js"></script>
