style: update mobile controls styling and replace text with icons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CSD Museum </title>
   <link href="https://fonts.googleapis.com/css2?family=Victor+Mono&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <style>
     body {
       margin: 0;
@@ -219,15 +220,15 @@
       }
 
       #mobile-controls button {
-        background-color: #1edd1e;
-        color: black;
+        background-color: #8b34d3 ;
+        color: white;
         border: none;
         padding: 0.6em 1.2em;
-        font-size: 1.2rem;
+        font-size: 1.5rem;
         border-radius: 6px;
         cursor: pointer;
         font-family: 'Victor Mono', monospace;
-        box-shadow: 0 0 5px #1edd1e;
+        box-shadow: 0 0 5px #1c9db4 ;
         white-space: nowrap;
         min-width: 60px;
         text-align: center;
@@ -257,8 +258,8 @@
   <div id="slide-container">Loading...</div>
 
   <div id="mobile-controls">
-    <button id="prev-button">⟵</button>
-    <button id="next-button">⟶</button>
+    <button id="prev-button"><i class="fas fa-arrow-left"></i></button>
+    <button id="next-button"><i class="fas fa-arrow-right"></i></button>
   </div>
 
   <div id="banner">
