style: reorder slide content elements for improved layout

--- a/index.html
+++ b/index.html
@@ -188,8 +188,12 @@
         display: flex;
       }
 
-      .slide-content .image {
+      .slide-content .header {
         order: 0;
+      }
+
+      .slide-content .image {
+        order: 1;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -197,7 +201,7 @@
       }
 
       .slide-content .text {
-        order: 1;
+        order: 2;
       }
 
       #slide-container {
