style: align text

--- a/index.html
+++ b/index.html
@@ -192,6 +192,8 @@
 
       .slide-content .text {
         order: 2;
+        text-align: left;
+        padding: 0;
       }
 
       #slide-container {
