style: adjust slide content padding and width for improved layout

--- a/index.html
+++ b/index.html
@@ -174,12 +174,14 @@
 
       .slide-content {
         flex-direction: column;
-        padding: 0 1em;
+        padding: 0;
         gap: 1em;
+        width: 100%;  
       }
 
       .slide-content .body {
         flex-direction: column;
+        width: 100%;
       }
 
       .slide-content .image {
@@ -187,9 +189,11 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 0 1em;
+        padding: 0;
+        width: 90%;
+        box-sizing: border-box;
       }
-
+      
       .slide-content .text {
         order: 2;
         text-align: left;
