--- a/public/index.html
+++ b/public/index.html
@@ -132,11 +132,11 @@
       bottom: 0;
       left: 0;
       right: 0;
-      height: 80px;
+      height: 100px;
       background-color: #ffffff;
       display: flex;
       align-items: center;
-      justify-content: center; /* center logos horizontally */
+      justify-content: left;
       padding: 0 2em;
       gap: 2em;
       box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.1);
@@ -145,7 +145,7 @@
     }
 
     #banner img {
-      height: 50px;
+      height: 80px;
       max-height: 100%;
       object-fit: contain;
       transition: transform 0.2s ease;
