refactor: update Dockerfile and nginx configuration

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
       min-height: 100vh;
       height: 100%;
       flex-direction: column;
-      padding-bottom: 80px; /* Added space for the fixed banner */
+      padding-bottom: 80px;
     }
 
     #progress-bar-container {
@@ -61,7 +61,7 @@
       font-size: 1.5rem;
       line-height: 1.4;
       transition: opacity 1s ease;
-      padding-bottom: 100px; /* Ensure space for banner */
+      padding-bottom: 100px;
     }
 
     .slide-content {
@@ -211,8 +211,8 @@
 
       #slide-container {
         font-size: 1.1rem;
-        overflow-x: hidden; /* Prevent horizontal overflow */
-        word-wrap: break-word; /* Break long words to fit */
+        overflow-x: hidden;
+        word-wrap: break-word;
       }
 
       #mobile-controls {
@@ -276,9 +276,9 @@
   </div>
 
   <div id="banner">
-    <img src="resources/images/UoC_logo_with_text.png" alt="UOC-Logo" />
-    <img src="resources/images/40yearsLogo.png" alt="CSD-40-Years" />
-    <img src="resources/images/qr-code.png" alt="QR-code" class="qr-code" />
+    <img src="assets/images/UoC_logo_with_text.png" alt="UOC-Logo" />
+    <img src="assets/images/40yearsLogo.png" alt="CSD-40-Years" />
+    <img src="assets/images/qr-code.png" alt="QR-code" class="qr-code" />
   </div>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
   <script src="script.js"></script>
