refactor: modularize CSS by separating styles into individual files

--- a/public/index.html
+++ b/public/index.html
@@ -2,335 +2,16 @@
 <html lang="el">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=3, user-scalable=yes">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>CSD Museum </title>
   <link href="https://fonts.googleapis.com/css2?family=Victor+Mono&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <style>
-    body {
-      margin: 0;
-      padding: 0;
-      font-family: 'Victor Mono', monospace;
-      background-color: black;
-      color: #1edd1e;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      min-height: 100vh;
-      height: 100%;
-      flex-direction: column;
-      padding-bottom: 80px;
-    }
-
-    #progress-bar-container {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 5px;
-      background-color: #333;
-      z-index: 9999;
-      margin-bottom: 5em;
-    }
-
-    progress {
-      width: 100%;
-      height: 100%;
-      appearance: none;
-      border: none;
-      background-color: transparent;
-    }
-
-    progress::-webkit-progress-bar {
-      background-color: #ddd;
-    }
-
-    progress::-webkit-progress-value {
-      background-color: #800080;
-      transition: width 1s ease;
-    }
-
-    progress::-moz-progress-bar {
-      background-color: #800080;
-    }
-
-    #slide-container {
-      width: 100%;
-      max-width: 2000px;
-      font-size: 1.5rem;
-      line-height: 1.4;
-      transition: opacity 1s ease;
-      padding-bottom: 100px;
-    }
-
-    .slide-content {
-      display: flex;
-      flex-direction: column;
-      gap: 1.5em;
-      padding: 0 2em;
-      margin-bottom: 4em;
-    }
-
-    .slide-content .header {
-      width: 100%;
-      text-align: left;
-      margin: 0;
-      padding: 0 2em;
-    }
-
-    .slide-content .body {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 2em;
-      justify-content: left;
-      padding: 0 1em;
-    }
-
-    .slide-content .text {
-      flex: 3;
-      min-width: 300px;
-      padding: 1em;
-    }
-
-    .slide-content .image {
-      flex: 1;
-      min-width: 250px;
-    }
-
-    .slide-content .image img {
-      max-height: 60vh;
-      max-width: 100%;
-      width: auto;
-      height: auto;
-      object-fit: contain;
-    }
-
-    .slide-content img {
-      max-width: 100%;
-      height: auto;
-      border: 3px solid #1edd1e;
-    }
-
-    .slide-content .header h1 {
-      margin-top: 1.5em;
-    }
-
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 1.2rem;
-      color: #BF00FF;
-      text-shadow:
-        0 0 2px #BF00FF,
-        0 0 4px #BF00FF,
-        0 0 6px #800080;
-      letter-spacing: 1.5px;
-    }
-
-    #banner {
-      position: fixed;
-      bottom: 0;
-      left: 0;
-      right: 0;
-      height: 100px;
-      background-color: #ffffff;
-      display: flex;
-      align-items: center;
-      justify-content: left;
-      padding: 0 2em;
-      gap: 2em;
-      box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.1);
-      z-index: 1000;
-      flex-wrap: wrap;
-    }
-
-    #banner img {
-      height: 80px;
-      max-height: 100%;
-      object-fit: contain;
-      transition: transform 0.2s ease;
-    }
-
-    #banner img:hover {
-      transform: scale(1.05);
-    }
-
-    #mobile-controls {
-      display: none;
-    }
-
-    .year-slide {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100%;
-      background: black;
-      color: #00ffcc;
-      animation: fadeIn 1s ease-in-out;
-      position: relative; /* for CRT scanline effect if used */
-    }
-
-    .year-heading {
-      font-family: 'VT323', monospace;
-      font-size: 8rem;
-      text-shadow:
-        0 0 5px #00ffcc,
-        0 0 10px #00ffcc,
-        0 0 20px #00ffcc,
-        0 0 40px #00ffcc;
-      animation: flicker 2s infinite;
-    }
-
-    .year-subtitle {
-      font-family: 'VT323', monospace;
-      font-size: 2.5rem;
-      color: #00ffcc;
-      margin-top: 0.5rem;
-      text-align: center;
-      text-shadow:
-        0 0 3px #00ffcc,
-        0 0 7px #00ffcc;
-      animation: flicker 3s infinite;
-    }
-
-
-    /* Flicker animation */
-    @keyframes flicker {
-      0%, 18%, 22%, 25%, 53%, 57%, 100% {
-        opacity: 1;
-      }
-      20%, 24%, 55% {
-        opacity: 0.4;
-      }
-    }
-
-    /* Fade-in animation */
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-      } 
-      to {
-        opacity: 1;
-      }
-    }
-
-    /* Optional CRT scanline effect */
-    .year-slide::after {
-      content: '';
-      position: absolute;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: repeating-linear-gradient(
-        to bottom,
-        rgba(0, 255, 204, 0.05),
-        rgba(0, 255, 204, 0.05) 2px,
-        transparent 2px,
-        transparent 4px
-      );
-      pointer-events: none;
-    }
-
-    @media (max-width: 768px) {
-      body {
-        padding-bottom: 120px;
-      }
-
-      h1 {
-        font-size: 2rem;
-        margin-bottom: 1rem;
-      }
-
-      #progress-bar-container {
-        display: none;
-      }
-
-      .slide-content {
-        flex-direction: column;
-        padding: 0;
-        gap: 0.5em;
-        width: 100%;
-        box-sizing: border-box;
-      }
-
-      .slide-content .body {
-        flex-direction: column;
-        width: 100%;
-        gap: 0;
-      }
-
-      .slide-content .image {
-        order: 1;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        width: 90%;
-        box-sizing: border-box;
-      }
-
-      .slide-content .text {
-        order: 2;
-        text-align: left;
-        width: 100%;
-        box-sizing: border-box;
-        padding-left: 0em;
-        margin: 0;
-      }
-
-      .slide-content .header {
-        padding: 0 1em;
-      }
-
-      #slide-container {
-        font-size: 1.1rem;
-        overflow-x: hidden;
-        word-wrap: break-word;
-      }
-
-      #mobile-controls {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        gap: 1em;
-        position: fixed;
-        bottom: 90px;
-        left: 0;
-        right: 0;
-        margin: 0 auto;
-        max-width: 100%;
-        padding: 0 1em;
-        z-index: 1001;
-      }
-
-      #mobile-controls button {
-        background-color: #8b34d3;
-        color: white;
-        border: none;
-        padding: 0.6em 1.2em;
-        font-size: 1.5rem;
-        border-radius: 6px;
-        cursor: pointer;
-        font-family: 'Victor Mono', monospace;
-        box-shadow: 0 0 5px #1c9db4;
-        min-width: 60px;
-        text-align: center;
-        flex: 1;
-      }
-
-      #banner {
-        height: 60px;
-        justify-content: center;
-        gap: 1em;
-        padding: 0.5em;
-      }
-
-      #banner img {
-        height: 50px;
-      }
-
-      .qr-code {
-        display: none;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="css/base.css" />
+  <link rel="stylesheet" href="css/components/banner.css" />
+  <link rel="stylesheet" href="css/components/progress-bar.css" />
+  <link rel="stylesheet" href="css/components/slide-content.css" />
+  <link rel="stylesheet" href="css/components/mobile-controls.css" />
+  <link rel="stylesheet" href="css/components/year-slide.css" />
 </head>
 
 <body>
