refactor: modularize javascript

--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,6 @@
     <img src="assets/images/qr-code.png" alt="QR-code" class="qr-code" />
   </div>
   <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-  <script src="script.js"></script>
+  <script type="module" src="js/main.js"></script>
 </body>
 </html>
