refactor: minor changes

--- a/public/index.html
+++ b/public/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>CSD Museum </title>
+  <title>Museum </title>
   <link href="https://fonts.googleapis.com/css2?family=Victor+Mono&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <link rel="stylesheet" href="style/base.css" />
-  <link rel="stylesheet" href="style/components/banner.css" />
-  <link rel="stylesheet" href="style/components/progress-bar.css" />
-  <link rel="stylesheet" href="style/components/slide-content.css" />
-  <link rel="stylesheet" href="style/components/mobile-controls.css" />
-  <link rel="stylesheet" href="style/components/year-slide.css" />
+  <link rel="stylesheet" href="css/base.css" />
+  <link rel="stylesheet" href="css/components/banner.css" />
+  <link rel="stylesheet" href="css/components/progress-bar.css" />
+  <link rel="stylesheet" href="css/components/slide-content.css" />
+  <link rel="stylesheet" href="css/components/mobile-controls.css" />
+  <link rel="stylesheet" href="css/components/year-slide.css" />
 </head>
 
 <body>
