refactor: make footer stable in mobile

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Victor+Mono&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <link rel="stylesheet" href="css/base.css" />
-  <link rel="stylesheet" href="css/components/banner.css" />
+  <link rel="stylesheet" href="css/components/footer.css" />
   <link rel="stylesheet" href="css/components/progress-bar.css" />
   <link rel="stylesheet" href="css/components/slide-content.css" />
   <link rel="stylesheet" href="css/components/mobile-controls.css" />
@@ -26,7 +26,7 @@
     <button id="next-button"><i class="fas fa-arrow-right"></i></button>
   </div>
 
-  <div id="banner">
+  <div id="footer">
     <img src="assets/images/UoC_logo_with_text.png" alt="UOC-Logo" />
     <img src="assets/images/40yearsLogo.png" alt="CSD-40-Years" />
     <img src="assets/images/qr-code.png" alt="QR-code" class="qr-code" />
