--- a/public/html/RA81.html
+++ b/public/html/RA81.html
@@ -6,15 +6,23 @@
         <title>RA81</title>
         <link href="/css/base.css" rel="stylesheet" />
         <link href="/css/components/slide-content.css" rel="stylesheet" />
+        <link href="/css/components/footer.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Victor+Mono&display=swap" rel="stylesheet">
       </head>
       <body>
-        <div class="slide-content">
-          <div class="header"><h1>RA81</h1></div>
-          <div class="body">
-            <div class="text"><p>Το RA81 είναι ένας οδηγός δίσκων μη-μετακινήσιμου μέσου χωρητικότητας 456 Mbytes που επιτρέπει τυχαία πρόσβαση στα δεδομένα μέσω μετακινούμενης κεφαλής (τεχνολογία “Winchester”). Παρουσιάστηκε τον Ιούνιο του 1982 από την Digital Equipment Corporation (DEC) ως μέρος της Ψηφιακής Αρχιτεκτονικής Αποθήκευσής (Digital Storage Architecture) της. Ο δίσκος έχει επιφάνεια ακτίνας 14 ιντσών (35.56 εκατοστά) με δύο κεφαλές ανά επιφάνεια. Εσωτερικά ελέγχεται από δύο μικροεπεξεργαστές που χρησιμοποιούν κώδικες διόρθωσης σφαλμάτων έξαρσης (burst ECC) 32-bit. Προσφέρει μια σειριακή πόρτα RS232 για διαγνωστική χρήση. Το RA81 συνδεόταν σε ελεγκτή μέσω ενός διαύλου Standard Disk Interconnect (SDI). Ο ελεγκτής μπορούσε να συνδεθεί με περισσότερους δίσκους για αύξηση της χωρητικότητας. Το RA81 μπορούσε να συνδεθεί σε διαμόρφωση δύο εισόδων (dual port) ώστε να επιτρέπει χρονομερισμένη πρόσβαση από δύο ελεγκτές. Το RA81 είναι ένα αυτάρκες σύστημα με εσωτερικό σύστημα ψύξης. Ένα υποσύστημα δίσκων RA81 αποτελείται από έναν ελεγκτή δίσκων SDI και έναν ή περισσότερους οδηγούς δίσκων.</p></div>
-            <div class="image"><img src="../assets/images/IMAGE_NAME.jpg" alt="IMAGE_NAME"></div>
+        <div id="slide-container">
+          <div class="slide-content">
+            <div class="header"><h1>RA81</h1></div>
+            <div class="body">
+              <div class="text"><p>Το RA81 είναι ένας οδηγός δίσκων μη-μετακινήσιμου μέσου χωρητικότητας 456 Mbytes που επιτρέπει τυχαία πρόσβαση στα δεδομένα μέσω μετακινούμενης κεφαλής (τεχνολογία “Winchester”). Παρουσιάστηκε τον Ιούνιο του 1982 από την Digital Equipment Corporation (DEC) ως μέρος της Ψηφιακής Αρχιτεκτονικής Αποθήκευσής (Digital Storage Architecture) της. Ο δίσκος έχει επιφάνεια ακτίνας 14 ιντσών (35.56 εκατοστά) με δύο κεφαλές ανά επιφάνεια. Εσωτερικά ελέγχεται από δύο μικροεπεξεργαστές που χρησιμοποιούν κώδικες διόρθωσης σφαλμάτων έξαρσης (burst ECC) 32-bit. Προσφέρει μια σειριακή πόρτα RS232 για διαγνωστική χρήση. Το RA81 συνδεόταν σε ελεγκτή μέσω ενός διαύλου Standard Disk Interconnect (SDI). Ο ελεγκτής μπορούσε να συνδεθεί με περισσότερους δίσκους για αύξηση της χωρητικότητας. Το RA81 μπορούσε να συνδεθεί σε διαμόρφωση δύο εισόδων (dual port) ώστε να επιτρέπει χρονομερισμένη πρόσβαση από δύο ελεγκτές. Το RA81 είναι ένα αυτάρκες σύστημα με εσωτερικό σύστημα ψύξης. Ένα υποσύστημα δίσκων RA81 αποτελείται από έναν ελεγκτή δίσκων SDI και έναν ή περισσότερους οδηγούς δίσκων.</p></div>
+              <div class="image"><img src="../assets/images/IMAGE_NAME.jpg" alt="IMAGE_NAME"></div>
+            </div>
           </div>
+        </div>
+        <div id="footer">
+          <img src="/assets/images/UoC_logo_with_text.png" alt="UOC-Logo" />
+          <img src="/assets/images/40yearsLogo.png" alt="CSD-40-Years" />
+          <img src="/assets/images/qr-code.png" alt="QR-code" class="qr-code" />
         </div>
       </body>
       </html>
