--- a/public/html/TS02.html
+++ b/public/html/TS02.html
@@ -6,15 +6,23 @@
         <title>TS02</title>
         <link href="/css/base.css" rel="stylesheet" />
         <link href="/css/components/slide-content.css" rel="stylesheet" />
+        <link href="/css/components/footer.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Victor+Mono&display=swap" rel="stylesheet">
       </head>
       <body>
-        <div class="slide-content">
-          <div class="header"><h1>TS02</h1></div>
-          <div class="body">
-            <div class="text"><p>To TS05 παρουσιάστηκε το 1982 ως ένας συμπαγής, οικονομικός, οδηγός μαγνητικής ταινίας για συστήματα PDP-11 καθώς και για τα εισαγωγικά (χαμηλής/μέσης απόδοσης) μέλη της οικογένειας VAX. Ήταν ένας αυτο-φορτώσιμος οδηγός που χρησιμοποιούσε ταινίες προτύπου 9 διαδρομών (9-track). Περιείχε μικροεπεξεργαστή για την διαχείριση (εκτέλεση διαγνωστικών) και αξιοπιστία των δεδομένων. Ο οδηγός αυτός παραγόταν από την Cipher Data Products (μοντέλο Cipher F880). Tο συνολικό υποσύστημα TSV05 Tape Transport αποτελούνταν από ένα TS05 Tape Transport και έναν ελεγκτή που συνδεόταν στον υπολογιστή υποδοχής (εδώ το MicroVAX II). Το TS05 και ο ελεγκτής επικοινωνούσαν μέσω ενός διαύλου ο οποίος ήταν βιομηχανικό πρότυπο της εποχής.</p></div>
-            <div class="image"><img src="../assets/images/IMAGE_NAME.jpg" alt="TS02"></div>
+        <div id="slide-container">
+          <div class="slide-content">
+            <div class="header"><h1>TS02</h1></div>
+            <div class="body">
+              <div class="text"><p>To TS05 παρουσιάστηκε το 1982 ως ένας συμπαγής, οικονομικός, οδηγός μαγνητικής ταινίας για συστήματα PDP-11 καθώς και για τα εισαγωγικά (χαμηλής/μέσης απόδοσης) μέλη της οικογένειας VAX. Ήταν ένας αυτο-φορτώσιμος οδηγός που χρησιμοποιούσε ταινίες προτύπου 9 διαδρομών (9-track). Περιείχε μικροεπεξεργαστή για την διαχείριση (εκτέλεση διαγνωστικών) και αξιοπιστία των δεδομένων. Ο οδηγός αυτός παραγόταν από την Cipher Data Products (μοντέλο Cipher F880). Tο συνολικό υποσύστημα TSV05 Tape Transport αποτελούνταν από ένα TS05 Tape Transport και έναν ελεγκτή που συνδεόταν στον υπολογιστή υποδοχής (εδώ το MicroVAX II). Το TS05 και ο ελεγκτής επικοινωνούσαν μέσω ενός διαύλου ο οποίος ήταν βιομηχανικό πρότυπο της εποχής.</p></div>
+              <div class="image"><img src="../assets/images/IMAGE_NAME.jpg" alt="TS02"></div>
+            </div>
           </div>
+        </div>
+        <div id="footer">
+          <img src="/assets/images/UoC_logo_with_text.png" alt="UOC-Logo" />
+          <img src="/assets/images/40yearsLogo.png" alt="CSD-40-Years" />
+          <img src="/assets/images/qr-code.png" alt="QR-code" class="qr-code" />
         </div>
       </body>
       </html>
