--- a/public/html/convex-c-120-candia.html
+++ b/public/html/convex-c-120-candia.html
@@ -6,16 +6,24 @@
         <title>convex-c-120-candia</title>
         <link href="/css/base.css" rel="stylesheet" />
         <link href="/css/components/slide-content.css" rel="stylesheet" />
+        <link href="/css/components/footer.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Victor+Mono&display=swap" rel="stylesheet">
       </head>
       <body>
-        <div class="slide-content">
-          <div class="header"><h1>Convex C-120 CANDIA</h1></div>
-          <div class="body">
-            <div class="text"><p>Η σειρά Convex C αποτελείται από παράλληλα συστήματα με διανυσματικούς (vector) καταχωρητές και αρχιτεκτονική επικοινωνίας διαύλων. Η σειρά αποτελείται από τα μοντέλα C-120/130 και C-210/220/230/240. Η κεντρική μονάδα επεξεργασίας (CPU) του C-120 αποτελείται από έναν βαθμωτό (scalar) επεξεργαστή, μονάδα διαχείρισης διευθύνσεων, και έναν διανυσματικό (vector) επεξεργαστή τεχνολογίας CMOS VLSI 20K gates/chip. Η διανυσματική αρχιτεκτονική είναι register-to-register με τρεις ασύγχρονες λειτουργίες διοχέτευσης (pipeline): load, store, and edit; add, subtract; multiply, add, divide, και square root. Κάθε CPU έχει 8 διανυσματικούς καταχωρητές, καθέναν με 128 στοιχεία των 64-bit. Η βαθμωτή (scalar) μονάδα εκτελεί αριθμητική ακεραίων και πολλαπλασιασμό, πρόσθεση, διαίρεση και τετραγωνική ρίζα κινούμενης υποδιαστολής στο υλικό με κρυφή μνήμη 64Kbyte. Οι βαθμωτές και διανυσματικές μονάδες μπορούν να επιχειρούν ταυτόχρονα. Πέραν του κύριου επεξεργαστή CPU, το C-120 έχει μονάδες ελέγχου καναλιών (CCUs) για Multibus και VMEbus, και ένα CCU για άλλες συσκευές υψηλής απόδοσης. Κάθε CCU έχει έναν επεξεργαστή 68020. Mια ανεξάρτητη μονάδα επεξεργασίας υπηρεσίας (SPU) με έναν 68020 τρέχει ένα απλουστευμένο UNIX για υπηρεσίες διαχείρισης συστήματος.</p>
+        <div id="slide-container">
+          <div class="slide-content">
+            <div class="header"><h1>Convex C-120 CANDIA</h1></div>
+            <div class="body">
+              <div class="text"><p>Η σειρά Convex C αποτελείται από παράλληλα συστήματα με διανυσματικούς (vector) καταχωρητές και αρχιτεκτονική επικοινωνίας διαύλων. Η σειρά αποτελείται από τα μοντέλα C-120/130 και C-210/220/230/240. Η κεντρική μονάδα επεξεργασίας (CPU) του C-120 αποτελείται από έναν βαθμωτό (scalar) επεξεργαστή, μονάδα διαχείρισης διευθύνσεων, και έναν διανυσματικό (vector) επεξεργαστή τεχνολογίας CMOS VLSI 20K gates/chip. Η διανυσματική αρχιτεκτονική είναι register-to-register με τρεις ασύγχρονες λειτουργίες διοχέτευσης (pipeline): load, store, and edit; add, subtract; multiply, add, divide, και square root. Κάθε CPU έχει 8 διανυσματικούς καταχωρητές, καθέναν με 128 στοιχεία των 64-bit. Η βαθμωτή (scalar) μονάδα εκτελεί αριθμητική ακεραίων και πολλαπλασιασμό, πρόσθεση, διαίρεση και τετραγωνική ρίζα κινούμενης υποδιαστολής στο υλικό με κρυφή μνήμη 64Kbyte. Οι βαθμωτές και διανυσματικές μονάδες μπορούν να επιχειρούν ταυτόχρονα. Πέραν του κύριου επεξεργαστή CPU, το C-120 έχει μονάδες ελέγχου καναλιών (CCUs) για Multibus και VMEbus, και ένα CCU για άλλες συσκευές υψηλής απόδοσης. Κάθε CCU έχει έναν επεξεργαστή 68020. Mια ανεξάρτητη μονάδα επεξεργασίας υπηρεσίας (SPU) με έναν 68020 τρέχει ένα απλουστευμένο UNIX για υπηρεσίες διαχείρισης συστήματος.</p>
 <p>H μέγιστη απόδοση του C-120 σε επιστημονικούς υπολογισμούς είναι 20 Mflops με διπλή ακρίβεια (αριθμητική 64-bit) και 40 Mflops με απλή ακρίβεια (αριθμητική 32-bit). Ένα βασικό σύστημα C-120 αποτελείται από δύο ερμάρια/ικριώματα και 32 Mbytes μνήμης, 1 επεξεργαστή I/O, 1 SPU, δίσκο Winchester 434 Mbyte, και οδηγό ταινίας 6250 bpi. Το μέγεθος κάθε ερμαρίου (cabinet) είναι 25 x 62 x 40in (64 x 158 x 102cm).</p></div>
-            <div class="image"><img src="../assets/images/convex-c-120-a.jpg" alt="Convex C-120 CANDIA"></div>
+              <div class="image"><img src="../assets/images/convex-c-120-a.jpg" alt="Convex C-120 CANDIA"></div>
+            </div>
           </div>
+        </div>
+        <div id="footer">
+          <img src="/assets/images/UoC_logo_with_text.png" alt="UOC-Logo" />
+          <img src="/assets/images/40yearsLogo.png" alt="CSD-40-Years" />
+          <img src="/assets/images/qr-code.png" alt="QR-code" class="qr-code" />
         </div>
       </body>
       </html>
