--- a/public/html/RA80.html
+++ b/public/html/RA80.html
@@ -6,15 +6,23 @@
         <title>RA80</title>
         <link href="/css/base.css" rel="stylesheet" />
         <link href="/css/components/slide-content.css" rel="stylesheet" />
+        <link href="/css/components/footer.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Victor+Mono&display=swap" rel="stylesheet">
       </head>
       <body>
-        <div class="slide-content">
-          <div class="header"><h1>RA80</h1></div>
-          <div class="body">
-            <div class="text"><p>Το RA80 είναι ένας οδηγός δίσκων μη-μετακινήσιμου μέσου χωρητικότητας 121 Mbytes που επιτρέπει τυχαία πρόσβαση στα δεδομένα μέσω μετακινούμενης κεφαλής (τεχνολογία “Winchester”). Παρουσιάστηκε το 1982 από την Digital Equipment Corporation (DEC) ως μέρος της Ψηφιακής Αρχιτεκτονικής Αποθήκευσής (Digital Storage Architecture) της. Ο δίσκος έχει επιφάνεια ακτίνας 14 ιντσών (35.56 εκατοστά) με δύο κεφαλές ανά επιφάνεια. Εσωτερικά ελέγχεται από μικροεπεξεργαστή και χρησιμοποιεί κώδικα διόρθωσης σφαλμάτων έξαρσης (burst ECC) 32-bit. Το RA80 συνδεόταν σε ελεγκτή μέσω ενός διαύλου Standard Disk Interconnect (SDI). Το RA80 μπορούσε να συνδεθεί σε διαμόρφωση δύο εισόδων (dual port) ώστε να επιτρέπει χρονομερισμένη πρόσβαση από δύο ελεγκτές.</p></div>
-            <div class="image"><img src="../assets/images/IMAGE_NAME.jpg" alt="RA80"></div>
+        <div id="slide-container">
+          <div class="slide-content">
+            <div class="header"><h1>RA80</h1></div>
+            <div class="body">
+              <div class="text"><p>Το RA80 είναι ένας οδηγός δίσκων μη-μετακινήσιμου μέσου χωρητικότητας 121 Mbytes που επιτρέπει τυχαία πρόσβαση στα δεδομένα μέσω μετακινούμενης κεφαλής (τεχνολογία “Winchester”). Παρουσιάστηκε το 1982 από την Digital Equipment Corporation (DEC) ως μέρος της Ψηφιακής Αρχιτεκτονικής Αποθήκευσής (Digital Storage Architecture) της. Ο δίσκος έχει επιφάνεια ακτίνας 14 ιντσών (35.56 εκατοστά) με δύο κεφαλές ανά επιφάνεια. Εσωτερικά ελέγχεται από μικροεπεξεργαστή και χρησιμοποιεί κώδικα διόρθωσης σφαλμάτων έξαρσης (burst ECC) 32-bit. Το RA80 συνδεόταν σε ελεγκτή μέσω ενός διαύλου Standard Disk Interconnect (SDI). Το RA80 μπορούσε να συνδεθεί σε διαμόρφωση δύο εισόδων (dual port) ώστε να επιτρέπει χρονομερισμένη πρόσβαση από δύο ελεγκτές.</p></div>
+              <div class="image"><img src="../assets/images/IMAGE_NAME.jpg" alt="RA80"></div>
+            </div>
           </div>
+        </div>
+        <div id="footer">
+          <img src="/assets/images/UoC_logo_with_text.png" alt="UOC-Logo" />
+          <img src="/assets/images/40yearsLogo.png" alt="CSD-40-Years" />
+          <img src="/assets/images/qr-code.png" alt="QR-code" class="qr-code" />
         </div>
       </body>
       </html>
