--- a/public/html/microvax-2.html
+++ b/public/html/microvax-2.html
@@ -6,16 +6,24 @@
         <title>microvax-2</title>
         <link href="/css/base.css" rel="stylesheet" />
         <link href="/css/components/slide-content.css" rel="stylesheet" />
+        <link href="/css/components/footer.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Victor+Mono&display=swap" rel="stylesheet">
       </head>
       <body>
-        <div class="slide-content">
-          <div class="header"><h1>MicroVAX II Μίνως</h1></div>
-          <div class="body">
-            <div class="text"><p>Το MicroVAX II παρουσιάστηκε τον Μάιο του 1985 σαν ένα ενδιάμεσο μέλος της οικογένειας MicroVAX της Digital Equipment Corporation (DEC). Υποστήριζε τα λειτουργικά συστήματα VAX/VMS και ULTRIX. Το ULTRIX ήταν έκδοση του Unix που ανέπτυσσε και προσέφερε η ίδια η DEC. Στο MicroVAX II προσφερόταν τουλάχιστον ένα επιπλέον λειτουργικό σύστημα εκτός αυτών που προσέφερε η DEC, όπως π.χ. το BSD Unix από την mt Xinu. Χρησιμοποιούσε την μονάδα CPU KA630-AA, μια μονάδα τετραπλού ύψους (quad-height) για δίαυλο Q22-Bus, και περιείχε τον μικροεπεξεργαστή MicroVAX 78032 και έναν συνεπεξεργαστή κινητής υποδιαστολής MicroVAX 78132 στα 5 MHz (200 ns κύκλος μηχανής). Η μονάδα περιείχε αρχικά 1 MB μνήμης και επέτρεπε επεκτάσεις μέχρι 16MB. 
+        <div id="slide-container">
+          <div class="slide-content">
+            <div class="header"><h1>MicroVAX II Μίνως</h1></div>
+            <div class="body">
+              <div class="text"><p>Το MicroVAX II παρουσιάστηκε τον Μάιο του 1985 σαν ένα ενδιάμεσο μέλος της οικογένειας MicroVAX της Digital Equipment Corporation (DEC). Υποστήριζε τα λειτουργικά συστήματα VAX/VMS και ULTRIX. Το ULTRIX ήταν έκδοση του Unix που ανέπτυσσε και προσέφερε η ίδια η DEC. Στο MicroVAX II προσφερόταν τουλάχιστον ένα επιπλέον λειτουργικό σύστημα εκτός αυτών που προσέφερε η DEC, όπως π.χ. το BSD Unix από την mt Xinu. Χρησιμοποιούσε την μονάδα CPU KA630-AA, μια μονάδα τετραπλού ύψους (quad-height) για δίαυλο Q22-Bus, και περιείχε τον μικροεπεξεργαστή MicroVAX 78032 και έναν συνεπεξεργαστή κινητής υποδιαστολής MicroVAX 78132 στα 5 MHz (200 ns κύκλος μηχανής). Η μονάδα περιείχε αρχικά 1 MB μνήμης και επέτρεπε επεκτάσεις μέχρι 16MB. 
 Το συγκεκριμένο της συλλογής μας χρησιμοποιεί την συσκευασία ικριώματος (rack-mount enclosure) H9642, η οποία υποστήριζε την ενσωμάτωση δίσκων RA60 και RA81 καθώς και οδηγό ταινίας TS05 όπως στο σύστημα της συλλογής μας.</p></div>
-            <div class="image"><img src="../assets/images/micro-vax-2-minos-a.jpg" alt="MicroVAX II Μίνως"></div>
+              <div class="image"><img src="../assets/images/micro-vax-2-minos-a.jpg" alt="MicroVAX II Μίνως"></div>
+            </div>
           </div>
+        </div>
+        <div id="footer">
+          <img src="/assets/images/UoC_logo_with_text.png" alt="UOC-Logo" />
+          <img src="/assets/images/40yearsLogo.png" alt="CSD-40-Years" />
+          <img src="/assets/images/qr-code.png" alt="QR-code" class="qr-code" />
         </div>
       </body>
       </html>
