--- a/public/html/plexus-p40.html
+++ b/public/html/plexus-p40.html
@@ -6,15 +6,23 @@
         <title>plexus-p40</title>
         <link href="/css/base.css" rel="stylesheet" />
         <link href="/css/components/slide-content.css" rel="stylesheet" />
+        <link href="/css/components/footer.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Victor+Mono&display=swap" rel="stylesheet">
       </head>
       <body>
-        <div class="slide-content">
-          <div class="header"><h1>Plexus P/40</h1></div>
-          <div class="body">
-            <div class="text"><p>Το Plexus P/40 παρουσιάστηκε <strong>στις αρχές της δεκαετίας του 1980 ως ένας υπολογιστής που προσέφερε το λειτουργικό σύστημα UNIX</strong>. Βασίστηκε στον επεξεργαστή Zilog Z8000 των 16-bit με 512KB μνήμης με αυτόματη διόρθωση λαθών, επεκτάσιμη σε 4MB. Υποστήριζε μέχρι και 40 ταυτόχρονους διαδραστικούς χρήστες. Μια τυπική διαρρύθμιση του P/40 περιελάμβανε έναν επεξεργαστή εργασίας και 2 επεξεργαστές εισόδου/εξόδου (I/O). Κατά την λειτουργία, ο επεξεργαστής εργασίας εκτελούσε υπολογισμούς και λειτουργίες λειτουργικού συστήματος ενώ οι επεξεργαστές I/O διαχειρίζονταν τον δίσκο, την ταινία, και την σειριακή είσοδο/έξοδο. Το P/40 έτρεχε την έκδοση του UNIX III της AT&amp;T, γραμμένο σε C, και υποστήριζε τις γλώσσες BASIC, COBOL, FORTRAN, και Pascal. Ο P/40 περιλάμβανε έναν έξυπνο επεξεργαστή μαζικής αποθήκευσης (IMSP) των 16-bit και 128KB τοπικής μνήμης. Ο IMSP μπορούσε να ελέγχει μέχρι 4 δίσκους Winchester 14 ιντσών 72MB ή 145MB και μια ταινία 1/2-ίντσας, 9-διαδρομών, 1,600-bpi. Οι P/40 μπορούσαν να διασυνδεθούν σε ένα τοπικό δίκτυο Xerox Ethernet.</p></div>
-            <div class="image"><img src="../assets/images/plexus-p40-a.jpg" alt="Plexus P/40"></div>
+        <div id="slide-container">
+          <div class="slide-content">
+            <div class="header"><h1>Plexus P/40</h1></div>
+            <div class="body">
+              <div class="text"><p>Το Plexus P/40 παρουσιάστηκε <strong>στις αρχές της δεκαετίας του 1980 ως ένας υπολογιστής που προσέφερε το λειτουργικό σύστημα UNIX</strong>. Βασίστηκε στον επεξεργαστή Zilog Z8000 των 16-bit με 512KB μνήμης με αυτόματη διόρθωση λαθών, επεκτάσιμη σε 4MB. Υποστήριζε μέχρι και 40 ταυτόχρονους διαδραστικούς χρήστες. Μια τυπική διαρρύθμιση του P/40 περιελάμβανε έναν επεξεργαστή εργασίας και 2 επεξεργαστές εισόδου/εξόδου (I/O). Κατά την λειτουργία, ο επεξεργαστής εργασίας εκτελούσε υπολογισμούς και λειτουργίες λειτουργικού συστήματος ενώ οι επεξεργαστές I/O διαχειρίζονταν τον δίσκο, την ταινία, και την σειριακή είσοδο/έξοδο. Το P/40 έτρεχε την έκδοση του UNIX III της AT&amp;T, γραμμένο σε C, και υποστήριζε τις γλώσσες BASIC, COBOL, FORTRAN, και Pascal. Ο P/40 περιλάμβανε έναν έξυπνο επεξεργαστή μαζικής αποθήκευσης (IMSP) των 16-bit και 128KB τοπικής μνήμης. Ο IMSP μπορούσε να ελέγχει μέχρι 4 δίσκους Winchester 14 ιντσών 72MB ή 145MB και μια ταινία 1/2-ίντσας, 9-διαδρομών, 1,600-bpi. Οι P/40 μπορούσαν να διασυνδεθούν σε ένα τοπικό δίκτυο Xerox Ethernet.</p></div>
+              <div class="image"><img src="../assets/images/plexus-p40-a.jpg" alt="Plexus P/40"></div>
+            </div>
           </div>
+        </div>
+        <div id="footer">
+          <img src="/assets/images/UoC_logo_with_text.png" alt="UOC-Logo" />
+          <img src="/assets/images/40yearsLogo.png" alt="CSD-40-Years" />
+          <img src="/assets/images/qr-code.png" alt="QR-code" class="qr-code" />
         </div>
       </body>
       </html>
