--- a/public/html/sun3-280s-8.html
+++ b/public/html/sun3-280s-8.html
@@ -6,17 +6,25 @@
         <title>sun3-280s-8</title>
         <link href="/css/base.css" rel="stylesheet" />
         <link href="/css/components/slide-content.css" rel="stylesheet" />
+        <link href="/css/components/footer.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Victor+Mono&display=swap" rel="stylesheet">
       </head>
       <body>
-        <div class="slide-content">
-          <div class="header"><h1>Sun 3/280S-8</h1></div>
-          <div class="body">
-            <div class="text"><p>Η σειρά Sun-3 από την Sun Microsystems αποτελείται από υπολογιστές λειτουργικού συστήματος UNIX οι οποίοι εμφανίστηκαν στις 9 Σεπτεμβρίου 1985. Η σειρά Sun-3 αποτελείται από συστήματα που <strong>χρησιμοποιούσαν τον μικροεπεξεργαστή Motorola 68020 και τον δίαυλο VMEbus</strong>, σε συνδυασμό με τον συνεπεξεργαστή κινητής υποδιαστολής (FPU) Motorola 68881 και μια κλειστή (proprietary) μονάδα διαχείρισης μνήμης (MMU) της Sun. Τα συστήματα Sun-3 υποστήριζαν το λειτουργικό σύστημα SunOS εκδόσεις 3.0 έως 4.1.1_U1, όπως και NetBSD και Linux.</p>
+        <div id="slide-container">
+          <div class="slide-content">
+            <div class="header"><h1>Sun 3/280S-8</h1></div>
+            <div class="body">
+              <div class="text"><p>Η σειρά Sun-3 από την Sun Microsystems αποτελείται από υπολογιστές λειτουργικού συστήματος UNIX οι οποίοι εμφανίστηκαν στις 9 Σεπτεμβρίου 1985. Η σειρά Sun-3 αποτελείται από συστήματα που <strong>χρησιμοποιούσαν τον μικροεπεξεργαστή Motorola 68020 και τον δίαυλο VMEbus</strong>, σε συνδυασμό με τον συνεπεξεργαστή κινητής υποδιαστολής (FPU) Motorola 68881 και μια κλειστή (proprietary) μονάδα διαχείρισης μνήμης (MMU) της Sun. Τα συστήματα Sun-3 υποστήριζαν το λειτουργικό σύστημα SunOS εκδόσεις 3.0 έως 4.1.1_U1, όπως και NetBSD και Linux.</p>
 <p>Το μοντέλο 3/280 της συλλογής μας (κωδικό όνομα αρχιτεκτονικής Sirius) ήταν βασισμένο στην πλατφόρμα (board) CPU Sun 3200, με συχνότητα CPU 25ΜΗz, FPU 20 ΜΗz, και μέγιστη διαρρύθμιση μνήμης RAM 32MB. Το μοντέλο αυτό μπορούσε να αναρτηθεί σε ικρίωμα (rack mount) και προσέφερε 12 θέσεις VMEbus.</p>
 <p>Στο ίδιο ικρίωμα εκτίθεται σκληρός δίσκος Hitachi DK815-10 9 ιντσών με περιστροφή στα 3600RPM και χωρητικότητα 892ΜΒ.</p></div>
-            <div class="image"><img src="../assets/images/sun-3-280s-8-a.jpg" alt="Sun 3/280S-8"></div>
+              <div class="image"><img src="../assets/images/sun-3-280s-8-a.jpg" alt="Sun 3/280S-8"></div>
+            </div>
           </div>
+        </div>
+        <div id="footer">
+          <img src="/assets/images/UoC_logo_with_text.png" alt="UOC-Logo" />
+          <img src="/assets/images/40yearsLogo.png" alt="CSD-40-Years" />
+          <img src="/assets/images/qr-code.png" alt="QR-code" class="qr-code" />
         </div>
       </body>
       </html>
