--- a/public/html/vax-8600.html
+++ b/public/html/vax-8600.html
@@ -6,16 +6,24 @@
         <title>vax-8600</title>
         <link href="/css/base.css" rel="stylesheet" />
         <link href="/css/components/slide-content.css" rel="stylesheet" />
+        <link href="/css/components/footer.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Victor+Mono&display=swap" rel="stylesheet">
       </head>
       <body>
-        <div class="slide-content">
-          <div class="header"><h1>VAX 8600 - TALOS</h1></div>
-          <div class="body">
-            <div class="text"><p>Το μοντέλο VAX 8600 παρουσιάστηκε τον Οκτώβριο του 1984 ως διάδοχο του VAX-11/785, με <strong>τετραπλάσια (4x) περίπου ταχύτητα από ένα VAX-11/780 όπως η Αριάδνη της συλλογής μας</strong>. Το VAX 8600 υλοποίησε την αρχιτεκτονική συνόλου εντολών (ISA) της οικογένειας VAX όπως και τα υπόλοιπα μέλη της οικογένειας.</p>
+        <div id="slide-container">
+          <div class="slide-content">
+            <div class="header"><h1>VAX 8600 - TALOS</h1></div>
+            <div class="body">
+              <div class="text"><p>Το μοντέλο VAX 8600 παρουσιάστηκε τον Οκτώβριο του 1984 ως διάδοχο του VAX-11/785, με <strong>τετραπλάσια (4x) περίπου ταχύτητα από ένα VAX-11/780 όπως η Αριάδνη της συλλογής μας</strong>. Το VAX 8600 υλοποίησε την αρχιτεκτονική συνόλου εντολών (ISA) της οικογένειας VAX όπως και τα υπόλοιπα μέλη της οικογένειας.</p>
 <p>Η κεντρική μονάδα επεξεργασίας (CPU) του είχε κύκλο μηχανής 80 ns (12.5 MHz) και υλοποιήθηκε με συστοιχίες μακροκυψελίδων (macrocell arrays ή MCAs) λογικών πυλών με σύζευξη εκπομπού (ECL). Η CPU αποτελείται από 4 κύριες λογικές ενότητες: E, F, I και M. Η ενότητα E εκτελεί όλες τις εντολές, συμπεριλαμβανομένων των εντολών κινητής υποδιαστολής (floating-point) μέσω μικροκώδικα. Περιέχει μια αριθμητική και λογική μονάδα (ALU) και έναν κυλινδρικό μετατοπιστή (barrel shifter). Η ενότητα F, ή επιταχυντής κυλιόμενης υποδιαστολής (FPA), είναι προαιρετική, για την υποβοήθηση εντολών κινητής υποδιαστολής και πολλαπλασιασμού και διαίρεσης ακεραίων. Η ενότητα I προσλαμβάνει και αποκωδικοποιεί τις εντολές. Η ενότητα M Box ελέγχει την μνήμη και την είσοδο/έξοδο, μεταφράζει εικονικές διευθύνσεις σε φυσικές και περιέχει μια κρυφή μνήμη δεδομένων των 16KB.</p></div>
-            <div class="image"><img src="../assets/images/vax-8600-talos.jpg" alt="VAX 8600 Talos"></div>
+              <div class="image"><img src="../assets/images/vax-8600-talos.jpg" alt="VAX 8600 Talos"></div>
+            </div>
           </div>
+        </div>
+        <div id="footer">
+          <img src="/assets/images/UoC_logo_with_text.png" alt="UOC-Logo" />
+          <img src="/assets/images/40yearsLogo.png" alt="CSD-40-Years" />
+          <img src="/assets/images/qr-code.png" alt="QR-code" class="qr-code" />
         </div>
       </body>
       </html>
