--- a/public/html/vicom-image-processor.html
+++ b/public/html/vicom-image-processor.html
@@ -6,17 +6,25 @@
         <title>vicom-image-processor</title>
         <link href="/css/base.css" rel="stylesheet" />
         <link href="/css/components/slide-content.css" rel="stylesheet" />
+        <link href="/css/components/footer.css" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css2?family=Victor+Mono&display=swap" rel="stylesheet">
       </head>
       <body>
-        <div class="slide-content">
-          <div class="header"><h1>Vicom Digital Image Processor</h1></div>
-          <div class="body">
-            <div class="text"><p>Ιστορικό στο Τμήμα: Αποτέλεσε την πρώτη εξειδικευμένη υπολογιστική υποδομή του Εργαστηρίου Επεξεργασίας και Ανάλυσης Εικόνων το οποίο ίδρυσε ο αείμνηστος Στέλιος Ορφανουδάκης και το οποίο μετεξελίχθηκε αργότερα στα τωρινά Εργαστήρια Υπολογιστικής Όρασης και Ρομποτικής (CVRL)  και Υπολογιστικής Βιοϊατρικής (CBML)  του Ινστιτούτου Πληροφορικής του ΙΤΕ. Η φυσική του θέση ήταν το εν λόγω Εργαστήριο στο υπόγειο της πτέρυγας Γ. Χρησιμοποιήθηκε από τα πρώτα μέλη και τους πρώτους υποτρόφους του Εργαστηρίου (Δρ. Ελένη Κωσταρίδου, Tsutomu Shibata, Μιχάλης Κολουντζάκης, Κύρος Κουτουλάκος, Αδάμ Δαμιανάκης, Ευριπίδης Πετράκης, Σπύρος Στεφάνου, Απόστολος Καρμιράντζος,  Αντώνης Αργυρός) σε πολλές εργασίες του Εργαστηρίου, σχετικά με την υπολογιστική μοντελοποίηση του ανθρώπινου ματιού, θέματα επεξεργασίας και ανάλυσης ιατρικών εικόνων, προβλήματα δορυφορικής τηλεπισκόπησης, κ.α</p>
+        <div id="slide-container">
+          <div class="slide-content">
+            <div class="header"><h1>Vicom Digital Image Processor</h1></div>
+            <div class="body">
+              <div class="text"><p>Ιστορικό στο Τμήμα: Αποτέλεσε την πρώτη εξειδικευμένη υπολογιστική υποδομή του Εργαστηρίου Επεξεργασίας και Ανάλυσης Εικόνων το οποίο ίδρυσε ο αείμνηστος Στέλιος Ορφανουδάκης και το οποίο μετεξελίχθηκε αργότερα στα τωρινά Εργαστήρια Υπολογιστικής Όρασης και Ρομποτικής (CVRL)  και Υπολογιστικής Βιοϊατρικής (CBML)  του Ινστιτούτου Πληροφορικής του ΙΤΕ. Η φυσική του θέση ήταν το εν λόγω Εργαστήριο στο υπόγειο της πτέρυγας Γ. Χρησιμοποιήθηκε από τα πρώτα μέλη και τους πρώτους υποτρόφους του Εργαστηρίου (Δρ. Ελένη Κωσταρίδου, Tsutomu Shibata, Μιχάλης Κολουντζάκης, Κύρος Κουτουλάκος, Αδάμ Δαμιανάκης, Ευριπίδης Πετράκης, Σπύρος Στεφάνου, Απόστολος Καρμιράντζος,  Αντώνης Αργυρός) σε πολλές εργασίες του Εργαστηρίου, σχετικά με την υπολογιστική μοντελοποίηση του ανθρώπινου ματιού, θέματα επεξεργασίας και ανάλυσης ιατρικών εικόνων, προβλήματα δορυφορικής τηλεπισκόπησης, κ.α</p>
 <p>Η Vicom Systems, Inc. παρουσίασε το 1981 τον VICOM Digital Image Processor, ένα σύστημα που επέτρεπε επεξεργασία εικόνας σε πραγματικό χρόνο εντός μιας συσκευής απεικόνισης όπως η οθόνη ενός υπολογιστή. Ο VICOM Digital Image Processor συνδύαζε υπολογιστικά στοιχεία γενικής και ειδικής χρήσης ενσωματωμένα σε μια αρχιτεκτονική εστιασμένη σε διαύλους επικοινωνίας, όπως αυτή του παρακάτω σχήματος (από την τεχνική αναφορά System architecture of Vicom digital image processor του William K. Pratt, 1981).</p>
 <p>Ο δίαυλος VICOM microcomputer bus προσφέρει επικοινωνία μεταξύ ενός εσωτερικού μικρουπολογιστή των 16-bit, έναν ελεγκτή εισόδου / εξόδου συνδεδεμένου σε έναν υπολογιστή εργασίας (host computer), και τα στοιχεία επεξεργασίας εικόνας σε πραγματικό χρόνο που συμπεριλαμβάνουν έναν ελεγκτή βίντεο, μνήμη για εικόνες / γραφικά, επεξεργαστή εικόνας με διοχέτευση (pipeline), και έναν ελεγκτή οθόνης. Τα στοιχεία επεξεργασίας εικόνας σε πραγματικό χρόνο διασυνδέονται μεταξύ τους και με ένα δίαυλο επικοινωνίας εικόνων υψηλής ταχύτητας. Το σύστημα VICOM είχε μέγιστη χωρητικότητα 4Μ pixels στην μνήμη RAM για εικόνες.</p></div>
-            <div class="image"><img src="../assets/images/vicom-image-processor-a.jpg" alt="Vicom Digital Image Processor"></div>
+              <div class="image"><img src="../assets/images/vicom-image-processor-a.jpg" alt="Vicom Digital Image Processor"></div>
+            </div>
           </div>
+        </div>
+        <div id="footer">
+          <img src="/assets/images/UoC_logo_with_text.png" alt="UOC-Logo" />
+          <img src="/assets/images/40yearsLogo.png" alt="CSD-40-Years" />
+          <img src="/assets/images/qr-code.png" alt="QR-code" class="qr-code" />
         </div>
       </body>
       </html>
